# gcore

./: CMakeLists.txt  README.md
core/: Action.h  Array.h  Callback.h  Class.h  Data.h  Define.h  FixType.h  IMP.cpp  Map.h  MethodImp.h  Object.h  Property.h  Ref.h  Reference.h  Singleton.h  String.h  StringName.h  Variant.h  core.h
core/math/: Math.hpp  Type.cpp  Type.h
core/script/: NativeObject.h  Script.cpp  Script.h  ScriptClass.h  ScriptInstance.h
script/: ScriptTransport.h
script/java/: JClass.h  JInstance.h  JScript.h
script/javascript/: JSScript.cpp  JSScript.h
script/ruby/: RubyScript.cpp  RubyScript.h
test/: TestObject.h  main.cpp
test/ruby/: test.rb  test_object.rb
test/ruby/gr/: callback.rb  data.rb  object.rb
